[package]
name = "nec_telegram_bot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sanpii/nec-telegram-bot"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
sumup = "0.3"
thiserror = "1.0"

[dependencies.teloxide]
version = "0.11"
features = ["macros"]

[dependencies.tokio]
version = "1.23"
features = ["rt-multi-thread", "macros"]
