[package]
name = "nec_telegram_bot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sanpii/nec-telegram-bot"

[dependencies]
envir = "0.2"
env_logger = "0.11"
log = "0.4"
sumup = "0.4"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.teloxide]
version = "0.12"
features = ["macros"]

[dependencies.tokio]
version = "1.23"
features = ["rt-multi-thread", "macros"]
