[package]
name = "nec_telegram_bot"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/sanpii/nec-telegram-bot"

[dependencies]
envir = "1.0"
log = "0.4"
sumup = "0.5"
thiserror = "2.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.teloxide]
version = "0.17"
features = ["macros"]

[dependencies.tokio]
version = "1.23"
features = ["rt-multi-thread", "macros"]
